--- a/gameplay.html
+++ b/gameplay.html
@@ -27,27 +27,34 @@
 				</header>
 
 			<!-- Nav -->
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li class="current"><a href="gameplay.html">Gameplay</a></li>
-						<li>
-							<a href="#">Community</a>
-							<ul>
-								<li><a href="https://twitter.com/islandsofavax">Twitter</a></li>
-								<li><a href="https://t.me/islandsofavax">Telegram</a></li>
-								<li><a href="https://discord.gg/u4VRNh5eSP">Discord</a></li>
-							</ul>
-						</li>
-						<li>
-							<a href="#">NFT Ecosystem</a>
-							<ul>
-								<li><a href="bridges.html">Bridges of AVAX</a></li>
-								<li><a href="index.html">Islands of AVAX</a></li>
-							</ul>
-						</li>
-					</ul>
-				</nav>
+			<nav id="nav">
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li class="current">
+						<a href="gameplay.html">Gameplay</a>
+						<ul>
+							<li><a href="gameplay.html">About the game</a></li>
+							<!--<li><a href="island-index.html">Island Index</a></li>-->
+							<li class="current"><a href="min-resource-dev.html">Islands Information</a></li>						
+						</ul>
+					</li>
+					<li>
+						<a href="#">Community</a>
+						<ul>
+							<li><a href="https://twitter.com/islandsofavax">Twitter</a></li>
+							<li><a href="https://t.me/islandsofavax">Telegram</a></li>
+							<li><a href="https://discord.gg/u4VRNh5eSP">Discord</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#">NFT Ecosystem</a>
+						<ul>
+							<li><a href="bridges.html">Bridges of AVAX</a></li>
+							<li><a href="index.html">Islands of AVAX</a></li>
+						</ul>
+					</li>
+				</ul>
+			</nav>
 
 			<!-- Main -->
 				<section id="main">
@@ -59,9 +66,9 @@
 									<section class="box features">
 											<h2 class="major"><span>Backstory</span></h2>
 										<p>
-											With the success of development programs AVALANCHE RUSH bringing in massive growth to the lands of AVAX, the people of AVAX found themselves with the issue of getting enough resources to fuel and power the rapid development. With the mainland region fully developed and the high cost of ETH gas fees making it hard to import resources, the administration of President Emin Gün Sirer has decided to turn their focus to developing the island archipelago region of AVAX. 
+											With the success of development programs AVALANCHE RUSH bringing in massive growth to the lands of AVAX, the people of AVAX found themselves with the issue of getting enough resources to fuel and power the rapid development. With the mainland region fully developed and the high cost of ETH gas fees making it hard to import resources, the administration of His Royal majesty Emin Gün Sirer has decided to turn their focus to developing the island archipelago region of AVAX. 
 											</p><p>Codenamed Island Rush, the program is aimed at developing the undeveloped and resource rich island archipelago region which is in dire need of development and bridging. Plans for new cities have been drawn up and industrialist/builders from all around the world are invited to partake in the great development project. 
-											Many have answered the call of President Emin Gün Sirer from industrialists looking bid on islands to start new ventures all the way to working families eager to relocate to new cities and work the resource rich islands. Large multinational conglomerates such as the GB Group and Ape Inc. are making plans to become dominant players in the region. 
+											Many have answered the call of His Royal Majesty Emin Gün Sirer from industrialists looking bid on islands to start new ventures all the way to working families eager to relocate to new cities and work the resource rich islands. Large multinational conglomerates such as the GB Group and Ape Inc. are making plans to become dominant players in the region. 
 											Whether you are building bridges to toll, developing industries on the islands, managing needs at population centers or running for governor, there are many opportunities for anyone to establish themselves at the Islands of AVAX. 
 										</p>
 										<section class="box highlight">
