--- a/index.html
+++ b/index.html
@@ -29,8 +29,15 @@
 			<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li class="current"><a href="index.html">Home</a></li>
-						<li><a href="gameplay.html">Gameplay</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li class="current">
+							<a href="gameplay.html">Gameplay</a>
+							<ul>
+								<li><a href="gameplay.html">About the game</a></li>
+								<!--<li><a href="island-index.html">Island Index</a></li>-->
+								<li class="current"><a href="min-resource-dev.html">Islands Information</a></li>						
+							</ul>
+						</li>
 						<li>
 							<a href="#">Community</a>
 							<ul>
