--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 										<ul>
 											<li class="button alt scrolly">Avalanche C-Chain</li>
 											<li class="button scrolly">2000 NFTs in collection</li>
-											<li class="button alt scrolly">Presale price 1 AVAX per NFT</li>
+											<li class="button alt scrolly">Presale price 1 AVAX per resource island NFT</li>
 										</ul>	
 										<header>
 											<h2>About the Islands of AVAX</h2>
@@ -100,10 +100,10 @@
 									<section class="box features">
 										<h2 class="major"><span>Backstory</span></h2>
 										<p>
-											With the success of development programs AVALANCHE RUSH bringing in massive growth to the lands of AVAX, the people of AVAX found themselves with the issue of getting enough resources to fuel and power the rapid development. With the mainland region fully developed and the high cost of ETH gas fees making it hard to import resources, the administration of President Emin Gün Sirer has decided to turn their focus to developing the island archipelago region of AVAX. 
+											With the success of development programs AVALANCHE RUSH bringing in massive growth to the lands of AVAX, the people of AVAX found themselves with the issue of getting enough resources to fuel and power the rapid development. With the mainland region fully developed and the high cost of ETH gas fees making it hard to import resources, the administration of His Royal Majesty Emin Gün Sirer has decided to turn their focus to developing the island archipelago region of AVAX. 
 											</p><p>
 											Codenamed Island Rush, the program is aimed at developing the undeveloped and resource rich island archipelago region which is in dire need of development and bridging. Plans for new cities have been drawn up and industrialist/builders from all around the world are invited to partake in the great development project. 
-											Many have answered the call of President Emin Gün Sirer from industrialists looking bid on islands to start new ventures all the way to working families eager to relocate to new cities and work the resource rich islands. Large multinational conglomerates such as the GB Group and Ape Inc. are making plans to become dominant players in the region. 
+											Many have answered the call of His Royal Majesty Emin Gün Sirer from industrialists looking bid on islands to start new ventures all the way to working families eager to relocate to new cities and work the resource rich islands. Large multinational conglomerates such as the GB Group and Ape Inc. are making plans to become dominant players in the region. 
 										</p><p>
 											Whether you are building bridges to toll, developing industries on the islands, managing needs at population centers or running for governor, there are many opportunities for anyone to establish themselves at the Islands of AVAX. 
 										</p>
@@ -163,7 +163,7 @@
 															<img src="images/capitol-island.png" alt="" style="width:200px;height:200px;"/>
 															<h3>Project DAO</h3>
 															<p>
-																A portion of the sale proceeds will go towards a perpetual fund. Monthly revenue from the perpetual will be paid out to players in the form of economic activity (Eg. Token Airdrops & other NFT airdrops) 
+																A portion of the sale proceeds will go towards a perpetual fund. Monthly allowance from the perpetual will be paid out to players in the form of economic activity (Eg. Token Airdrops & other NFT airdrops) 
 															</p>
 														</section>
 
@@ -201,26 +201,31 @@
 						</p>
 						<h3>NFT Launch</h3>
 						<p>
-							Islands will be minted and released in batches of 100 on NFTrade starting at 1 AVAX each and are claimed on a first come first serve basis. 
+							Islands will be pre-minted and released to the public in batches of 100 on NFTrade (Lands Rush Events). Prices starting at 1 AVAX each and are claimed on a first come first serve basis. 
 							All islands are listed under specific district and regions, 5% of island sales proceeds will go to the District Governors as district tax. 
-							A portion of the presale proceeds becomes the DAO fund and will go into an interest yielding platform (eg. AAVE/CRV etc...).											 
+							A portion of the presale proceeds will be put into an interest yielding platform (eg. AAVE/CRV etc...) to generate monthly allowance to pay out in game rewards (directed by the DAO).											 
 						</p> 
 						<h3>Economic Simulator</h3>
 						<p>
-							Land plot NFTs are airdropped to urban island owners (3 residential plots per urban island or 8 per district governor) & buildings options are available to players. 
-							Revenue from the DAO gaming fund will be distributed to island holders to simulate economic activity.
+							Urban land plot NFTs are airdropped to urban island owners (4-8 plots per urban island or 16 per district governor) & buildings options are available to players. 
+							Monthly proceeds from the project gaming fund will be distributed to island holders to simulate economic activity. (Token dropped to be determined by players via governor voting system)
 							Island owners start receiving token/NFT airdrops as part of the economic simulation (See <a href="gameplay.html">gameplay secton</a> on how in game payout is calculated). 
 						</p>
 						<h3>Play to Earn game</h3>
 						<p>Advanced mechanics are included piece by piece as the simulation becomes a play to earn game. 
-							Features includes: Resource commodities trading, food, tariffs, population management, staking, bridges & tolling, manufacturing plants (Turns resources into NFTs), district policies, district powerups and more to come. 
+							Features includes: Resource commodities trading, food, tariffs, population management, staking, bridges & tolling, manufacturing plants (Turns resources into NFTs), district policies, invasions & wars, district powerups and more to come. 
 						</p>
 						<h3>Game Governance & DAO</h3>
 						<p>
 							Island owners can participate in the project DAO voting on project direction and additional game mechanics. 
-							Federal governance option opens up allowing more gameplay options including exploration of new islands, declaring indepedence and choosing new trading partners. 
+							Federal governance option opens up allowing more gameplay options including exploration of new islands, declaring indepedence and choosing new trading partners. 							
 						</p>
-				</div>
+						<h3>Expansion to cross chains</h3>
+						<p>
+							Expansion to other chains to allow chain vs chain gameplay. Each chain/network represents a nation filled with thousands of players on each side.
+							Imagine leading the AVAX island region and fighting off invaders from a war mongering ETH chain nation while building up an alliance with the BSC chain nation to retailate via a trade embargo.
+						</p>
+					</div>
 			</section>
 
 			<section id="main">
