--- a/gameplay.html
+++ b/gameplay.html
@@ -257,32 +257,37 @@
 			<!-- Roadmap--> 
 			<section id="main2">
 				<div class="container">
-						<h2 class="major"><span>Roadmap</span></h2>
-						<h3>Prelaunch</h3>
-						<p>
-							Islands of AVAX will be launching with a number of prize giveaways on social media. Be sure to follow us on <a href="https://twitter.com/islandsofavax">Twitter</a> and  <a href="https://t.me/islandsofavax">Telegram</a> to not miss out. 
-						</p>
-						<h3>NFT Launch</h3>
-						<p>
-							Islands will be minted and released in batches of 100 on NFTrade starting at 1 AVAX each and are claimed on a first come first serve basis. 
-							All islands are listed under specific district and regions, 5% of island sales proceeds will go to the District Governors as district tax. 
-							A portion of the presale proceeds becomes the DAO fund and will go into an interest yielding platform (eg. AAVE/CRV etc...).											 
-						</p> 
-						<h3>Economic Simulator</h3>
-						<p>
-							Land plot NFTs are airdropped to urban island owners (3 residential plots per urban island or 8 per district governor) & buildings options are available to players. 
-							Revenue from the DAO gaming fund will be distributed to island holders to simulate economic activity.
-							Island owners start receiving token/NFT airdrops as part of the economic simulation (See <a href="gameplay.html">gameplay secton</a> on how in game payout is calculated). 
-						</p>
-						<h3>Play to Earn game</h3>
-						<p>Advanced mechanics are included piece by piece as the simulation becomes a play to earn game. 
-							Features includes: Resource commodities trading, food, tariffs, population management, staking, bridges & tolling, manufacturing plants (Turns resources into NFTs), district policies, district powerups and more to come. 
-						</p>
-						<h3>Game Governance & DAO</h3>
-						<p>
-							Island owners can participate in the project DAO voting on project direction and additional game mechanics. 
-							Federal governance option opens up allowing more gameplay options. 
-						</p>
+					<h2 class="major"><span>Roadmap</span></h2>
+					<h3>Prelaunch</h3>
+					<p>
+						Islands of AVAX will be launching with a number of prize giveaways on social media. Be sure to follow us on <a href="https://twitter.com/islandsofavax">Twitter</a> and  <a href="https://t.me/islandsofavax">Telegram</a> to not miss out. 
+					</p>
+					<h3>NFT Launch</h3>
+					<p>
+						Islands will be pre-minted and released to the public in batches of 100 on NFTrade (Lands Rush Events). Prices starting at 1 AVAX each and are claimed on a first come first serve basis. 
+						All islands are listed under specific district and regions, 5% of island sales proceeds will go to the District Governors as district tax. 
+						A portion of the presale proceeds will be put into an interest yielding platform (eg. AAVE/CRV etc...) to generate monthly allowance to pay out in game rewards (directed by the DAO).											 
+					</p> 
+					<h3>Economic Simulator</h3>
+					<p>
+						Urban land plot NFTs are airdropped to urban island owners (4-8 plots per urban island or 16 per district governor) & buildings options are available to players. 
+						Monthly proceeds from the project gaming fund will be distributed to island holders to simulate economic activity. (Token dropped to be determined by players via governor voting system)
+						Island owners start receiving token/NFT airdrops as part of the economic simulation (See <a href="gameplay.html">gameplay secton</a> on how in game payout is calculated). 
+					</p>
+					<h3>Play to Earn game</h3>
+					<p>Advanced mechanics are included piece by piece as the simulation becomes a play to earn game. 
+						Features includes: Resource commodities trading, food, tariffs, population management, staking, bridges & tolling, manufacturing plants (Turns resources into NFTs), district policies, invasions & wars, district powerups and more to come. 
+					</p>
+					<h3>Game Governance & DAO</h3>
+					<p>
+						Island owners can participate in the project DAO voting on project direction and additional game mechanics. 
+						Federal governance option opens up allowing more gameplay options including exploration of new islands, declaring indepedence and choosing new trading partners. 							
+					</p>
+					<h3>Expansion to cross chains</h3>
+					<p>
+						Expansion to other chains to allow chain vs chain gameplay. Each chain/network represents a nation filled with thousands of players on each side.
+						Imagine leading the AVAX island region and fighting off invaders from a war mongering ETH chain nation while building up an alliance with the BSC chain nation to retailate via a trade embargo.
+					</p>
 				</div>
 			</section>
 				
