--- a/gameplay.html
+++ b/gameplay.html
@@ -39,6 +39,14 @@
 						</ul>
 					</li>
 					<li>
+						<a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391">Launch Sale</a>
+						<ul>
+							<li><a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391">All Islands</a></li>
+							<li><a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391?traitIds=2f98b4b7-b14e-40c1-9ba5-392c2ca47cb7&search=&sort=listed_desc">Premium Islands</a></li>
+							<li><a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391/417">District Capital Auction</a></li>
+						</ul>
+					</li>
+					<li>
 						<a href="#">Community</a>
 						<ul>
 							<li><a href="https://twitter.com/islandsofavax">Twitter</a></li>
