--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
 							</ul>
 						</li>
 						<li>
+							<a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391">Launch Sale</a>
+							<ul>
+								<li><a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391">All Islands</a></li>
+								<li><a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391?traitIds=2f98b4b7-b14e-40c1-9ba5-392c2ca47cb7&search=&sort=listed_desc">Premium Islands</a></li>
+								<li><a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391/417">District Capital Auction</a></li>
+							</ul>
+						</li>
+						<li>
 							<a href="#">Community</a>
 							<ul>
 								<li><a href="https://twitter.com/islandsofavax">Twitter</a></li>
@@ -63,9 +71,11 @@
 						<p>An original handmade NFT collection of 2000 NFT islands with utility in a Play 2 Earn game.</p>
 						<p>Powered by the Avalanche (AVAX) Blockchain and sold exclusively on NFtrade</p>
 						<ul>
-							<p>400 Genesis islands releasing</p> 
-							<a href="https://app.nftrade.com/users/avalanche/0x8d489aa72ad34257ecd8ff7989bed1175239088f" class="button scrolly">October 15, 2021 3PM EST</a>
-							<p><a href="https://www.timeanddate.com/worldclock/fixedtime.html?msg=3+P.M.+EST+Converter&iso=20211015T15&p1=810">(Noon PST | 9PM CEST | 5AM AEST)</a> </p>
+							<p>400 Genesis islands released October 15, 2021 7PM UTC</p> 
+							<a href="https://app.nftrade.com/users/avalanche/0x8d489aa72ad34257ecd8ff7989bed1175239088f" class="button scrolly">ISLAND RUSH (Starts at 1 AVAX)</a>
+							<a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391?traitIds=2f98b4b7-b14e-40c1-9ba5-392c2ca47cb7&search=&sort=listed_desc"  class="button scrolly">Premium Islands</a>
+							<a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391/417" class="button scrolly">District Capital Auction</a>
+							<p>Auction ends Oct 18 7PM UTC</p>
 
 
 						</ul>
