--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 			<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li class="current">
+						<li class="current"><a href="index.html">Home</a></li>
+						<li>
 							<a href="gameplay.html">Gameplay</a>
 							<ul>
 								<li><a href="gameplay.html">About the game</a></li>
 								<!--<li><a href="island-index.html">Island Index</a></li>-->
-								<li class="current"><a href="min-resource-dev.html">Islands Information</a></li>						
+								<li><a href="min-resource-dev.html">Islands Information</a></li>						
 							</ul>
 						</li>
 						<li>
@@ -43,7 +43,7 @@
 							<ul>
 								<li><a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391">All Islands</a></li>
 								<li><a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391?traitIds=2f98b4b7-b14e-40c1-9ba5-392c2ca47cb7&search=&sort=listed_desc">Premium Islands</a></li>
-								<li><a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391/417">District Capital Auction</a></li>
+								<li><a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391/645">District Capital Auction</a></li>
 							</ul>
 						</li>
 						<li>
@@ -73,6 +73,7 @@
 						<ul>
 							<p>ISLAND RUSH event happening November 1st, 2021 7PM UTC</p> 
 							<a href="https://app.nftrade.com/users/avalanche/0x8d489aa72ad34257ecd8ff7989bed1175239088f" class="button scrolly">ISLAND RUSH (Starts at 1.5 AVAX)</a>
+							<a href="https://discord.gg/br9tv8Jjtk" class="button scrolly">Join Presale whitelist on Discord</a>
 							<!--<a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391?traitIds=2f98b4b7-b14e-40c1-9ba5-392c2ca47cb7&search=&sort=listed_desc"  class="button scrolly">Premium Islands</a>
 							<a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391/417" class="button scrolly">District Capital Auction</a>
 							<p>Auction ends Oct 18 7PM UTC</p> -->
