--- a/min-resource-dev.html
+++ b/min-resource-dev.html
@@ -39,13 +39,15 @@
 							</ul>
 						</li>
 						<li>
-							<a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391">Launch Sale</a>
+							<a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391">Marketplace</a>
 							<ul>
 								<li><a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391">All Islands</a></li>
+								<li><a href="https://app.nftrade.com/users/avalanche/0x8d489aa72ad34257ecd8ff7989bed1175239088f">Island Rush 2</a></li>
 								<li><a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391?traitIds=2f98b4b7-b14e-40c1-9ba5-392c2ca47cb7&search=&sort=listed_desc">Premium Islands</a></li>
 								<li><a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391/645">District Capital Auction</a></li>
 							</ul>
 						</li>
+
 						<li>
 							<a href="#">Community</a>
 							<ul>
