--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
 							</ul>
 						</li>
 						<li>
-							<a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391">Launch Sale</a>
+							<a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391">Marketplace</a>
 							<ul>
 								<li><a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391">All Islands</a></li>
+								<li><a href="https://app.nftrade.com/users/avalanche/0x8d489aa72ad34257ecd8ff7989bed1175239088f">Island Rush 2</a></li>
 								<li><a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391?traitIds=2f98b4b7-b14e-40c1-9ba5-392c2ca47cb7&search=&sort=listed_desc">Premium Islands</a></li>
 								<li><a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391/645">District Capital Auction</a></li>
 							</ul>
@@ -72,14 +73,10 @@
 						<p>Powered by the Avalanche (AVAX) Blockchain and sold exclusively on NFtrade</p>
 						<ul>
 							<p>ISLAND RUSH event happening November 1st, 2021 7PM UTC</p> 
-							<a href="https://app.nftrade.com/users/avalanche/0x8d489aa72ad34257ecd8ff7989bed1175239088f" class="button scrolly">Scout ISLAND RUSH Islands</a>
-							<a href="https://discord.gg/br9tv8Jjtk" class="button scrolly">Join Presale whitelist on Discord</a>
-							<p>Presale starts Friday 7PM UTC</p>
+							<a href="https://app.nftrade.com/users/avalanche/0x8d489aa72ad34257ecd8ff7989bed1175239088f" class="button scrolly">Islands RUSH (Starts at 1.5 AVAX)</a>
 							<!--<a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391?traitIds=2f98b4b7-b14e-40c1-9ba5-392c2ca47cb7&search=&sort=listed_desc"  class="button scrolly">Premium Islands</a>
 							<a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391/417" class="button scrolly">District Capital Auction</a>
-							<p>Auction ends Oct 18 7PM UTC</p> -->
-
-
+							<p>Auction starts at 200 AVAX opening bid with minimum 20 AVAX increments and ends with highest bid at the top for 16-20 hrs (King of the Hill/FOMO3D style)</p> -->
 						</ul>
 					</div>
 				</section>
