--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Islands of AVAX | A Collection of NFT islands with an Economic Simulation only on the AVAX Avalanche Network</title>
 		<meta charset="utf-8" />
-		<!--
+		<!--Twitter & FB Meta tags not working
 		<meta property="og:title" content="Islands of AVAX | Collection of NFT Islands + Economic Simulation Game on AVAX">
 		<meta property="og:description" content="A Collection of NFT islands with an Economic Simulation only on the AVAX Avalanche Network.">
 		<meta property="og:image" content="https://islandsofavax.com/images/medium-lumber-island.png">
@@ -72,11 +72,11 @@
 						<p>An original handmade NFT collection of 2000 NFT islands with utility in a Play 2 Earn game.</p>
 						<p>Powered by the Avalanche (AVAX) Blockchain and sold exclusively on NFtrade</p>
 						<ul>
-							<p>ISLAND RUSH event happening November 1st, 2021 7PM UTC</p> 
+							<p>ISLAND RUSH event starts November 1st, 2021 7PM UTC</p> 
 							<a href="https://app.nftrade.com/users/avalanche/0x8d489aa72ad34257ecd8ff7989bed1175239088f" class="button scrolly">Islands RUSH (Starts at 1.5 AVAX)</a>
-							<!--<a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391?traitIds=2f98b4b7-b14e-40c1-9ba5-392c2ca47cb7&search=&sort=listed_desc"  class="button scrolly">Premium Islands</a>
+							<!--<a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391?traitIds=2f98b4b7-b14e-40c1-9ba5-392c2ca47cb7&search=&sort=listed_desc"  class="button scrolly">Premium Islands</a>-->
 							<a href="https://app.nftrade.com/assets/avalanche/0xf21a42e203db80593478f2e7ed8f97a8db9b3391/417" class="button scrolly">District Capital Auction</a>
-							<p>Auction starts at 200 AVAX opening bid with minimum 20 AVAX increments and ends with highest bid at the top for 16-20 hrs (King of the Hill/FOMO3D style)</p> -->
+							<p>Auction starts at 200 AVAX opening bid with minimum 20 AVAX increments and ends with highest bid at the top for 16-20 hrs (King of the Hill/FOMO3D style)</p>
 						</ul>
 					</div>
 				</section>
