--- a/island-index.html
+++ b/island-index.html
@@ -51,6 +51,7 @@
 							<ul>
 								<li><a href="bridges.html">Bridges of AVAX</a></li>
 								<li><a href="index.html">Islands of AVAX</a></li>
+								<li><a href="avaxnavies.html">AVAX Navies</a></li>
 							</ul>
 						</li>
 					</ul>
