--- a/avaxnavies.html
+++ b/avaxnavies.html
@@ -89,7 +89,7 @@
 										</ul>
 										<ul>
 											<li class="button alt scrolly">Avalanche C-Chain</li>
-											<li class="button scrolly">3000 NFTs in collection</li>
+											<li class="button scrolly">5000 NFTs in collection</li>
 											<li class="button alt scrolly">Play2Earn use cases</li>
 										</ul>	
 										<header>
@@ -97,7 +97,7 @@
 											<p>Ready to be collected and traded</p>
 										</header>
 										<p>
-											AVAX Navies is a collection of 3000 naval vessel NFTs on the AVAX network with unique ship class, crew experience level, manufacturing origin, year built, backgrounds and traits. 
+											AVAX Navies is a collection of 5000 naval vessel NFTs on the AVAX network with unique ship class, crew experience level, manufacturing origin, year built, backgrounds and traits. 
 											Naval vessels and the BATTLE CONTRACT it is built with can be used as integration pieces to games on the AVAX Network. 
 											AVAX Navies is launched as an expansion for the Islands of AVAX NFT collection to bring about a combat component. 
 											Ships can be used interchangeably across different supported games.
@@ -289,7 +289,7 @@
 						<button class="accordion">WEN MINT?</button>
 						<div class="panel">
 						<p>
-							Minting starts Nov 30th starting at 0.5 AVAX per vessel. Players can mint up to 20 vessels per transaction. We also have VIP mint for anyone who graduated from the Naval academy navy-bootcamp-canteen. 						</p>
+							Minting starts Nov 30th starting at 0.5 AVAX per vessel and moving up as inventory sells. Players can mint up to 20 vessels per transaction. We also have VIP mint for anyone who graduated from the Naval academy.</p>
 						</div>
 
 						<button class="accordion">WHAT'S WITH THE ORIGINS, MASCOTS AND EXPERIENCE LEVEL?</button>
