--- a/avaxnavies.html
+++ b/avaxnavies.html
@@ -41,7 +41,7 @@
 					<ul>
 						<li class="current3"><a href="avaxnavies.html">Home</a></li>
 						<li>
-							<a href="#">Mint - Coming Nov 30</a>
+							<a href="https://avaxnavies.com">Mint</a>
 						</li>
 						<li>
 							<a href="#">Community</a>
@@ -68,7 +68,7 @@
 						<h2>Dominate the Seas of AVAX</h2>
 						<p>Collect unique naval vessels NFTs, engage in missions, raid neighbors and participate in massive team vs team battles while earning within the Avalanche Network. Do you have what it takes to become the Master of the Seas? </p>
 						<ul>
-							<a href="#" class="button scrolly">Mint - Launching Nov 30</a>
+							<a href="https://avaxnavies.com" class="button scrolly">Mint Today!</a>
 						</ul>
 					</div>
 				</section>
@@ -226,7 +226,7 @@
 								New missions and faction mechanics are organized over the Islands of AVAX Discord channel. 
 							</p>
 							<div class="box highlight">
-								<!-- <a href="mint.html" class="button large">Mint Vessels</a> -->
+								<a href="https://avaxnavies.com" class="button large">Mint Vessels</a>
 								<a href="https://discord.gg/u4VRNh5eSP" class="button alt large">Join Discord</a>
 							</div>
 
