--- a/freebies.html
+++ b/freebies.html
@@ -94,6 +94,7 @@ height="600px"
 style="max-width:100%;"
 frameborder="0"
 ></iframe>
+<p>If your browser is not showing the iframe, you can go here <a href="https://gateway.ipfscdn.io/ipfs/QmYQ7F7jT9K8Yyctw99zPKU65a1L4mXktcs24dvVKZDnQW/nft-drop.html?contract=0x177A3AD7402f75cA648b5105640F729Aa78b7bA5&chainId=43114">Claim Page<a></a></p>
 									</section>
 							</div>
 						</div>
