mission control addition
adding mission control

--- a/avaxnavies.html
+++ b/avaxnavies.html
@@ -54,7 +54,6 @@
 						<li>
 							<a href="#">NFT Ecosystem</a>
 							<ul>
-								<li><a href="bridges.html">Bridges of AVAX</a></li>
 								<li><a href="index.html">Islands of AVAX</a></li>
 								<li><a href="avaxnavies.html">AVAX Navies</a></li>
 							</ul>
@@ -97,10 +96,9 @@
 											<p>Ready to be collected and traded</p>
 										</header>
 										<p>
-											AVAX Navies is a collection of 5000 naval vessel NFTs on the AVAX network with unique ship class, crew experience level, manufacturing origin, year built, backgrounds and traits. 
-											Naval vessels and the BATTLE CONTRACT it is built with can be used as integration pieces to games on the AVAX Network. 
-											AVAX Navies is launched as an expansion for the Islands of AVAX NFT collection to bring about a combat component. 
-											Ships can be used interchangeably across different supported games.
+											AVAX Navies is a combat simluation featuring Naval bases (ERC721 NFTs) and naval ships (ERC20 tokens) within the Islands of AVAX Ecosystem.
+											Players construct shipyards on their islands and amass ships into their mercenary fleet. Participate in monthly missions with Prisoners Dilemma/Byzantine general logics.
+											Join up with other players and start your own mercenary agency. Create your fortune in the FIATland occupied Archipelago region and become the master of the seas. 
 										</p>
 									</section>							
 							</div>
@@ -111,11 +109,11 @@
 										<h2 class="major"><span>Features</span></h2>
 										<b>Build your fleet</b>
 										<p>											
-											Build up your fleet of naval vessels with unique traits and specialities. Each ship is unique with its own origin, ship class, build year and more. 
+											Collect Shipyards to get a steady flow of ships to commit on missions. 
 										</p>
 										<b>Join Player Run Teams and MicroDAO factions</b>
 										<p>
-											Join up with player run factions and micro DAOs working towards control of the region from Sea worthy Vikings to astute GB company executives. Fight alongside revolutionaries seeking to bring independence to the archipelago or remain loyal to the AVAX crown. 
+											Join up with player run factions and micro DAOs working towards control of the region from Sea worthy Vikings to astute GB company executives. Fight alongside AVAX revolutionaries seeking to bring independence to the archipelago or be a hired gun for the FIATland occupation government. 
 										</p>
 										<b>Take on Quests and Missions</b>
 										<p>
@@ -123,7 +121,7 @@
 										</p>
 										<b>Play2Earn</b>
 										<p>
-											Earn in game rewards (NFTs and token payouts) through Missions (PvE, PvP & team boss battles), naval officer commissions and becoming a regional ship builder contractor. 
+											Earn in game rewards (NFTs and token payouts) through Missions (PvE, PvP & team boss battles), as a faction leader or through providing resources to the resistance. 
 										</p>
 										<b>Sustainable and Ethical Gaming Pool</b>
 										<p>
