--- a/menu.html
+++ b/menu.html
@@ -22,10 +22,10 @@
                     <div class="grid">
                         <img class="grid" src="images/visual-menu.jpg" width="1400" height="780"  />
 
-                        <a href="mission-control.html#an-naval-yard"><img class="b1" src="images/avax-resistance.png" width="250" height="90" title="Resistance Docks"/></a>
-                        <a href="mission-control.html#an-mission"><img class="b2" src="images/avax-resistance.png" width="250" height="90" title="Mission Control"/></a>
-                        <a href="mission-control.html#an-blackmarket"><img class="b3" src="images/avax-resistance.png" width="250" height="90" title="Black Market"/></a>
-                        <a href="mission-control.html#an-hq"><img class="b4" src="images/avax-resistance.png" width="250" height="90" title="HQ Facilities"/></a>
+                        <a href="mission-control.html#an-naval-yard"><img class="b1" src="images/button1.png" width="250" height="90" title="Resistance Docks"/></a>
+                        <a href="mission-control.html#an-mission"><img class="b2" src="images/button2.png" width="250" height="90" title="Mission Control"/></a>
+                        <a href="mission-control.html#an-blackmarket"><img class="b3" src="images/button3.png" width="250" height="90" title="Black Market"/></a>
+                        <a href="mission-control.html#an-hq"><img class="b4" src="images/button4.png" width="250" height="90" title="HQ Facilities"/></a>
                     </div>
 
                 </div>
